--- a/src/main/res/values-night/colors.xml
+++ b/src/main/res/values-night/colors.xml
@@ -10,6 +10,7 @@
     <color name="backgroundWidgetToolbar">#202020</color>
     <color name="backgroundPullup">#242424</color>
     <color name="backgroundNotification">#392E25</color>
+    <color name="backgroundStationmarker">#404040</color>
     <color name="foreground">#D0D0D0</color>
     <color name="foregroundHint">#909090</color>
     <color name="foregroundText">@color/foreground</color>
@@ -19,4 +20,10 @@
     <color name="errorWidget">#D57E7E</color>
     <color name="success">#408040</color>
     <color name="successWidget">#8EDF7B</color>
+
+    <array name="shadow_colors">
+        <item>#A0080820</item>
+        <item>#40000010</item>
+        <item>#00000000</item>
+    </array>
 </resources>
